<resources>
    <string name="app_name">GPaddy Battery</string>
    <string name="action_settings">Settings</string>
    <string name="charge_activity">Battery Charge</string>
    <string name="info_activity">Battery Info</string>
    <string name="save_mode_activity">Save Mode</string>
    <string name="create_save_mode_activity">Create saver mode</string>
    <string name="rank_activity">Applications</string>
    <string formatted="false" name="app_full_name">GPaddy Battery</string>
    <string formatted="false" name="app_launcher_name">GPaddy Battery</string>
    <string formatted="false" name="settings_activity_subtitle">Settings</string>
    <string formatted="false" name="app_full_name_free">GPaddy Battery</string>
    <string formatted="false" name="battery_use_b">View Battery Use</string>
    <string formatted="false" name="upgrade_donate_b">Upgrade/Donate...</string>
    <string formatted="false" name="circle_widget">BatteryBot Circle</string>
    <string formatted="false" name="yes">Yes</string>
    <string formatted="false" name="cancel">Cancel</string>
    <string formatted="false" name="confirm_close">Really Close?</string>
  <string formatted="false" name="confirm_close_hint">
    BatteryBot will be completely closed, and you won\'t see it
    in your status bar any more.  Any desktop widgets will be useless.\n

    \nIf you just want to leave the main window and keep the service
    running, press Cancel and then just press your device\'s BACK
    button to leave the main window.\n

    \nIf you want to hide the notification but keep widgets running,
    press Cancel and then Hide Notification.
  </string>
    <string formatted="false" name="okay">Okay</string>
    <string formatted="false" name="tab_current_info">Current Info</string>
    <string formatted="false" name="notification_until_charged">" until charged"</string>
    <string formatted="false" name="notification_until_drained">" left"</string>
    <string formatted="false" name="activity_until_charged">until charged</string>
    <string formatted="false" name="activity_until_drained">until drained</string>
    <string formatted="false" name="menu_settings">Settings</string>
    <string formatted="false" name="menu_close">Close</string>
    <string formatted="false" name="menu_help">Help</string>
    <string formatted="false" name="menu_rate_and_review">Rate &amp; Review</string>
    <string formatted="false" name="menu_show_notification">Show Notification</string>
    <string formatted="false" name="menu_hide_notification">Hide Notification</string>
    <string formatted="false" name="percent_symbol">%</string>
    <string formatted="false" name="degree_symbol">°</string>
    <string formatted="false" name="fahrenheit">Fahrenheit</string>
    <string formatted="false" name="fahrenheit_symbol">F</string>
    <string formatted="false" name="celsius">Celsius</string>
    <string formatted="false" name="celsius_symbol">C</string>
    <string formatted="false" name="volt_symbol">V</string>
    <string formatted="false" name="status_unplugged">Unplugged</string>
    <string formatted="false" name="status_unknown">Unknown</string>
    <string formatted="false" name="status_charging">Charging</string>
    <string formatted="false" name="status_discharging">Discharging</string>
    <string formatted="false" name="status_not_charging">Not Charging</string>
    <string formatted="false" name="status_fully_charged">Fully Charged</string>
    <string formatted="false" name="health_unknown">Unknown</string>
    <string formatted="false" name="health_good">Good</string>
    <string formatted="false" name="health_overheat">OverHeat</string>
    <string formatted="false" name="health_dead">Dead</string>
    <string formatted="false" name="health_overvoltage">OverVoltage</string>
    <string formatted="false" name="health_failure">Failure</string>
    <string formatted="false" name="health_cold">Cold</string>
    <string formatted="false" name="plugged_unplugged">Unplugged</string>
    <string formatted="false" name="plugged_ac">(AC)</string>
    <string formatted="false" name="plugged_usb">(USB)</string>
    <string formatted="false" name="plugged_unknown">(?)</string>
    <string formatted="false" name="plugged_wireless">(Wireless)</string>
    <string name="hour">h</string>
    <string name="minute">m</string>
    <plurals name="n_log_items">
        <item quantity="one">%d Log Item</item>
        <item quantity="other">%d Log Items</item>
    </plurals>
    <plurals name="n_hours_long">
        <item quantity="one">"%d hour, "</item>
        <item quantity="other">"%d hours, "</item>
    </plurals>
    <plurals name="n_minutes_long">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="n_hours_medium">
        <item quantity="one">"%d hr, "</item>
        <item quantity="other">"%d hrs, "</item>
    </plurals>
    <plurals name="n_minutes_medium">
        <item quantity="one">%d min.</item>
        <item quantity="other">%d mins.</item>
    </plurals>
    <plurals name="n_hours_short">
        <item quantity="other">"%dh "</item>
    </plurals>
    <plurals name="n_minutes_short">
        <item quantity="other">%dm</item>
    </plurals>
    <plurals name="n_days">
        <item quantity="one">"%d day, "</item>
        <item quantity="other">"%d days, "</item>
    </plurals>
    <plurals name="n_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <string formatted="false" name="since">Since</string>
    <plurals name="for_n_hours">
        <item quantity="one">For %d Hour</item>
        <item quantity="other">For %d Hours</item>
    </plurals>
    <string formatted="false" name="currently_using">Currently using</string>
    <string formatted="false" name="currently_set_to">"Currently set to: "</string>
    <string formatted="false" name="currently_disabled">Currently Disabled</string>
    <string formatted="false" name="help_cat_version">Version</string>
    <string formatted="false" name="help_cat_changelog">Changelog</string>
  <string formatted="false" name="help_changelog">
    Please see the <a href="http://www.batterybot.info/changelog">online Changelog</a>.
  </string>
    <string formatted="false" name="help_cat_faq">Frequently Asked Questions</string>
  <string formatted="false" name="help_faq">
    Please see the <a href="http://www.batterybot.info/faq">online FAQ</a>.
  </string>
    <string formatted="false" name="help_cat_google_plus">Google Plus Page</string>
  <string formatted="false" name="help_google_plus">Consider
    folowing the <a href="https://www.google.com/+BatterybotInfoAndroid">Google Plus Page</a>
    for announcements and polls.
  </string>
    <string formatted="false" name="help_cat_website">Website</string>
  <string formatted="false" name="help_website">More
    infomation is available at the <a href="http://www.batterybot.info/">BatteryBot website</a>.
  </string>
    <string formatted="false" name="help_cat_open_source">Open Source</string>
  <string formatted="false" name="help_open_source">This
    is an open source project, which means you can <a href="http://www.batterybot.info/sourcecode">download the source
    code</a>.
  </string>
    <string formatted="false" name="help_cat_donate">Donate</string>
  <string formatted="false" name="help_donate">Please
    consider donating by upgrading to the <a href="market://details?id=com.darshancomputing.BatteryIndicatorPro">Pro
    Version</a>.
  </string>
    <string formatted="false" name="help_cat_no_warranty">No Warranty</string>
  <string formatted="false" name="help_no_warranty">
    This software is distributed in the hope that it will be useful, but
    WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.\n

    \nWhile I do my best to make sure that it works well and does not
    cause problems, I am not responsible for any damage or inconvenience
    it may cause under any circumstance.
  </string>
    <string formatted="false" name="help_cat_acknowledgments">Acknowledgments</string>
  <string formatted="false" name="help_acknowledgments">This
    app would only be available in English without the generous
    assistance of the volunteer translators.  Thanks!\n

    \nMany thanks are due to Google and all of the open-source coders
    who made the Android platform and this app possible.\n

    \nThe launcher icon (the upright battery you see in the Market) is
    based on an icon from <a href="http://www.oxygen-icons.org">the
    Oxygen icon theme</a> and used under the
    <a href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Common
      Attribution-ShareAlike 3.0 License</a>.
  </string>
    <string formatted="false" name="help_cat_translations">Translations</string>
  <string formatted="false" name="help_translations">I
    need help translating this app to new languages and maintaining
    the existing translations.  If you would like to help, please send
    me an <a href="mailto:support%2Btranslations@batterybot.info">email</a>.
    Please let me know if and how you would like your name listed in
    this section in acknowledgment of your assistance.
  </string>
    <string formatted="false" name="help_subcat_translators">Translators</string>
    <string formatted="false" name="help_cat_contact">Contact</string>
  <string formatted="false" name="help_contact">If
    you have a question, a problem, or a comment, please
    <a href="mailto:support@batterybot.info">email me</a>.
  </string>
    <string formatted="false" name="pref_hint">Hint: Press MENU for help.</string>
    <string formatted="false" name="pref_cat_more_settings_in_pro">More Settings in Pro</string>
  <string formatted="false" name="pref_please_upgrade">
    The Pro version has many more settings and features, including
    current (mA) information,
    colorful icons, alarms,
    battery state logging,
    and more.
  </string>
    <string formatted="false" name="pref_use_system_notification_layout">Use System Layout</string>
    <string formatted="false" name="pref_use_system_notification_layout_summary">Use system notification layout rather than custom BatteryBot layout?</string>
    <string name="wifi">Wifi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="sync">Auto sync</string>
    <string name="haptic">Haptic</string>
    <string name="not_save">Cancle</string>
    <string name="auto">Auto</string>
    <string name="brightness_title">Brightness</string>
    <string name="screen_title">Screen off time</string>
    <string name="sbutt1">15 sec</string>
    <string name="sbutt2">30 sec</string>
    <string name="sbutt3">1 min</string>
    <string name="sbutt4">2 min</string>
    <string name="sbutt5">10 min</string>
    <string name="sbutt6">30 min</string>
    <string name="ringer_title">Sound profile</string>
    <string name="rbutt1">Silent</string>
    <string name="switch_off">Off</string>
    <string name="apply">Apply</string>
  <string name="notifi_icon">Notification</string>
  <string name="charge_setting">Charge setting</string>
  <string name="convert_setting">View format</string>
  <string name="normal_setting">General</string>
  <string name="notifi_title">Toolbar widget</string>
  <string name="notifi_detail">Display toolbar in notification area</string>
  <string name="speed_charge_title">Boost charge</string>
  <string name="speed_charge_detail">Speed up battery charging</string>
  <string name="charge_sound_title">Notify full battery</string>
  <string name="charge_sound_detail">Sound when battery is full</string>
  <string name="temperature_title">Temperature Unit</string>
  <string name="c_temperature">Celsius</string>
  <string name="langue_title">Language</string>
  <string name="vn_lang">Tiếng Việt</string>
  <string name="en_lang">English</string>
</resources>