<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#37474f"
    android:minHeight="300dp"
    android:minWidth="400dp">
    <TextView
        android:layout_margin="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/langue_title"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_weight="2"
        />
    <com.rey.material.widget.RadioButton
        android:id="@+id/butt1"
        style="@style/Material.Drawable.RadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|left"
        android:clickable="false"
        android:text="@string/vn_lang"
        android:textColor="#ffffff"
        android:gravity="center"
        android:layout_weight="1"/>
    <com.rey.material.widget.RadioButton
        android:id="@+id/butt2"
        style="@style/Material.Drawable.RadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|left"
        android:clickable="false"
        android:text="@string/en_lang"
        android:textColor="#ffffff"
        android:gravity="center"
        android:layout_weight="1"/>
    <com.gc.materialdesign.views.ButtonFlat
        android:id="@+id/cancle_butt"
        android:layout_margin="10dp"
        android:layout_gravity="center|right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:text="@string/not_save"
        android:layout_weight="0.5"
        />
</LinearLayout>