<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#37474f"
    android:padding="20dp"
    android:minWidth="350dp"
    android:minHeight="400dp">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="Chế độ ngủ sâu"
        android:id="@+id/text_title"
        android:textSize="20sp"
        android:textColor="#ffffff"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/battery_color"
      />
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="8">
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:textColor="#ffffff"
                android:layout_weight="3"
                android:textSize="15sp"
                android:gravity="center_vertical"
                android:text="@string/brightness_title"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:textColor="#ffffff"
                android:layout_weight="1"
                android:textSize="15sp"
                android:gravity="center"
                android:id="@+id/text_brightness"
                android:text="@string/auto"
                />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:textColor="#ffffff"
                android:layout_weight="3"
                android:textSize="15sp"
                android:gravity="center_vertical"
                android:text="@string/screen_title"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:textColor="#ffffff"
                android:layout_weight="1"
                android:textSize="15sp"
                android:gravity="center"
                android:id="@+id/text_screen_off"
                android:text="@string/sbutt1"
                />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:textColor="#ffffff"
                android:layout_weight="3"
                android:textSize="15sp"
                android:gravity="center_vertical"
                android:text="@string/ringer_title"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:textColor="#ffffff"
                android:layout_weight="1"
                android:textSize="15sp"
                android:gravity="center"
                android:text="@string/rbutt1"
                android:id="@+id/text_ringer_mode"
                />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:textColor="#ffffff"
                android:layout_weight="3"
                android:textSize="15sp"
                android:gravity="center_vertical"
                android:text="@string/wifi"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:textColor="#ffffff"
                android:layout_weight="1"
                android:textSize="15sp"
                android:gravity="center"
                android:id="@+id/text_wifi"
                android:text="@string/switch_off"
                />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:textColor="#ffffff"
                android:layout_weight="3"
                android:textSize="15sp"
                android:gravity="center_vertical"
                android:text="@string/bluetooth"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:textColor="#ffffff"
                android:layout_weight="1"
                android:textSize="15sp"
                android:gravity="center"
                android:id="@+id/text_bluetooth"
                android:text="@string/switch_off"
                />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:textColor="#ffffff"
                android:layout_weight="3"
                android:textSize="15sp"
                android:gravity="center_vertical"
                android:text="@string/sync"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:textColor="#ffffff"
                android:layout_weight="1"
                android:textSize="15sp"
                android:gravity="center"
                android:id="@+id/text_sync"
                android:text="@string/switch_off"
                />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:textColor="#ffffff"
                android:layout_weight="3"
                android:textSize="15sp"
                android:gravity="center_vertical"
                android:text="@string/haptic"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:textColor="#ffffff"
                android:layout_weight="1"
                android:textSize="15sp"
                android:gravity="center"
                android:text="@string/switch_off"
                android:id="@+id/text_haptic"
                />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <View
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"/>
            <com.gc.materialdesign.views.ButtonFlat
                android:id="@+id/cancle_butt"
                android:layout_gravity="center|right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#f5f0f0"
                android:text="@string/not_save"
                android:layout_weight="1"/>
            <com.gc.materialdesign.views.ButtonFlat
                android:id="@+id/apply_butt"
                android:layout_gravity="center|right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/battery_color"
                android:text="@string/apply"
                android:layout_weight="1"/>
        </TableRow>
    </TableLayout>
</LinearLayout>