<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tool_not_pressed">
    <android.support.v7.widget.Toolbar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/charge_tool_bar"
        android:background="@color/tool_not_pressed"
        android:elevation="4dp"
        ></android.support.v7.widget.Toolbar>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/battery_color"/>
        <TextView
            android:layout_margin="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:textSize="15sp"
            android:text="@string/notifi_icon"
            android:textStyle="bold"
            />
        <View
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/text_color"/>
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/notifi_title"
                    android:textColor="@color/text_color"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/notifi_detail"
                    android:textColor="@color/text_color"
                    android:textSize="14sp"
                    />
            </LinearLayout>
            <com.rey.material.widget.Switch
                android:id="@+id/notifi_switch"
                style="@style/Material.Widget.Switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:checked="false" />
        </LinearLayout>
    <TextView
        android:layout_margin="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:textSize="15sp"
        android:text="@string/charge_setting"
        android:textStyle="bold"
        />
    <View
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/text_color"/>
    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/speed_charge_title"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/speed_charge_detail"
                android:textColor="@color/text_color"
                android:textSize="14sp"
                />
        </LinearLayout>
        <com.rey.material.widget.Switch
            android:id="@+id/charge_switch"
            style="@style/Material.Widget.Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:checked="false" />
    </LinearLayout>
    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/charge_sound_title"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/charge_sound_detail"
                android:textColor="@color/text_color"
                android:textSize="14sp"
                />
        </LinearLayout>
        <com.rey.material.widget.Switch
            android:id="@+id/charge_sound_switch"
            style="@style/Material.Widget.Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:checked="false" />
    </LinearLayout>
    <TextView
        android:layout_margin="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:textSize="15sp"
        android:text="@string/convert_setting"
        android:textStyle="bold"
        />
    <View
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/text_color"/>
    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/temp_butt"
        android:background="@drawable/tool_butt"
        android:clickable="true">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/temperature_title"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:textSize="15sp"
            />
        <TextView
            android:id="@+id/temp_type"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/c_temperature"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            />
    </LinearLayout>
    <TextView
        android:layout_margin="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:textSize="15sp"
        android:text="@string/normal_setting"
        android:textStyle="bold"
        />
    <View
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/text_color"/>
    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/tool_butt"
        android:clickable="true"
        android:id="@+id/lang_butt">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/langue_title"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:textSize="15sp"
            />
        <TextView
            android:id="@+id/lang_type"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/vn_lang"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            />
    </LinearLayout>
</LinearLayout>